fixed body overflow bug

--- a/src/components/UI/Header/Header.css
+++ b/src/components/UI/Header/Header.css
@@ -108,7 +108,7 @@
 
 @media (max-width:640px) {
     .navbar_ul {
-        position: absolute;
+        position: fixed;
         z-index: 999;
         inset: 0 0 auto auto;
         display: flex;
